examples/neg/case_insensitive_type_hint2.effekt
module case_insensitive_type_hint2

record Mytype()

def fun(): MyType = Mytype()